# cattywampus

./: Cargo.toml  README.md  alloc.c  alloc.h  cattywampus.cbp  cattywampus.depend  main.c  option.h  stack.c  stack.h  str.c  str.h  value.c  value.h
src/: functions.rs  lib.rs  main.rs  parser.rs  stack.rs  typecheck.rs  value.rs
