[package]
name = "cattywampus"
version = "0.1.0"
authors = ["twetzel59 <twetzel59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editline = { git = "https://github.com/wkz/rust-editline.git" }
lazy_static = "1.4.0"
regex = "1.5.5"
